--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ body * {
   margin-top: 10px;
   display: grid;
   grid-template-columns: repeat(4, minmax(250px, 1fr));
-  grid-gap: 10px;
+  grid-gap: 20px;
 }
 
 .SearchResult img {
@@ -84,6 +84,18 @@ body * {
   width: 100%;
 }
 
+@media screen and (max-width: 992px) {
+  .SearchResult{  grid-template-columns: repeat(3, minmax(250px, 1fr));}
+
+}
+@media screen and (max-width: 768px) {
+  .SearchResult{  grid-template-columns: repeat(2, minmax(250px, 1fr));}
+
+}
+@media screen and (max-width: 576px) {
+  .SearchResult{  grid-template-columns: repeat(1, minmax(250px, 1fr));}
+
+}
 /* dark mode 처리
 @media (prefers-color-scheme: dark) {
   body {
