--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,10 @@
   font-weight: normal;
   font-style: normal;
 }
+:root {
+  --font-color:#000;
+  --bg-color:white;
+}
 
 html {
   box-sizing: border-box;
@@ -11,6 +15,20 @@ html {
 
 body * {
   font-family: Goyang;
+}
+body.dark {
+    background-color: #000;
+    color: white;
+  }
+body.light {
+  color: var(--font-color);
+  background-color: var(--bg-color);
+}
+body{
+  transition: all 0.2s ease-in-out;
+  height: 100vh;
+  padding:0px;
+  margin: 0px;
 }
 
 *,
@@ -20,11 +38,11 @@ body * {
 }
 
 #App {
-  margin: 1.5em auto;
+  margin: 0 auto;
   max-width: 1200px;
+  height: 100vh;
   column-gap: 1.5em;
 }
-
 .SearchResult {
   margin-top: 10px;
   display: grid;
@@ -49,8 +67,9 @@ body * {
   width: 100%;
   font-size: 40px;
   padding: 10px 15px;
+  font-color:var(--font-color);
+  background-color: var(--bg-color);
 }
-
 .ImageInfo {
   position: fixed;
   left: 0;
@@ -96,11 +115,54 @@ body * {
   .SearchResult{  grid-template-columns: repeat(1, minmax(250px, 1fr));}
 
 }
-/* dark mode 처리
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #000;
     color: white;
   }
+
 }
-*?
+@media (prefers-color-scheme: light) {
+  body {
+    background-color: white;
+    color:#000 ;
+  }
+}
+
+.darkmode{
+  margin:0px 0px 15px 15px;
+}
+.checkbox {
+	opacity: 0;
+}
+
+.label {
+	background-color: #111;
+	border-radius: 50px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 5px;
+	position: relative;
+	height: 26px;
+	width: 50px;
+	transform: scale(1.5);
+}
+
+.label .ball {
+	background-color: #fff;
+	border-radius: 50%;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	height: 22px;
+	width: 22px;
+	transform: translateX(0px);
+	transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+	transform: translateX(24px);
+}
+
