--- a/src/style.css
+++ b/src/style.css
@@ -66,17 +66,31 @@ body{
   background-color: #eee;
 }
 .SearchResult .noResult-comment{
+  height: 60px;
   position: fixed;
   left: 40%;
   top: 40%;
-  height: 60px;
   font-size: 35px;
-  color: var(--loader-color)
+  color: var(--font-color)
 }
-.SearchInput {
+.inputBtn-Wapper {
+  display:flex;
   width: 100%;
+  align-items: center;
+  justify-content: space-around;
+}
+.inputBtn-Wapper .SearchInput  {
+  width: 70%;
   font-size: 40px;
   padding: 10px 15px;
+  color:var(--font-color);
+  background-color: var(--bg-color);
+  border: 1px solid var(--font-color);
+}
+.inputBtn-Wapper .randomBtn{
+  width: 20%;
+  padding: 10px 15px;
+  font-size: 35px;
   color:var(--font-color);
   background-color: var(--bg-color);
   border: 1px solid var(--font-color);
@@ -102,6 +116,7 @@ body{
 }
 
 .ImageInfo .content-wrapper {
+  height: 80vh;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -109,6 +124,7 @@ body{
   background-color: #fff;
   border: 1px solid #eee;
   border-radius: 5px;
+  overflow: auto;
 }
 
 .ImageInfo .content-wrapper img {
