--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,8 @@ body{
   display: inline-block;
   width: 100%;
   margin: 0 0 1em;
+  position: relative;
+  cursor: pointer;
   background-color: #eee;
 }
 .SearchResult .noResult-comment{
@@ -72,6 +74,23 @@ body{
   top: 40%;
   font-size: 35px;
   color: var(--font-color)
+}
+
+.SearchResult .hover-name{
+  display: none;
+  width: 100%;
+  height: 100%;
+  position:absolute;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(2px);
+}
+.SearchResult .name{
+  color:white;
+  font-size: 35px;
+  text-align: center;
+}
+.SearchResult .item:hover .hover-name{
+  display: block;
 }
 .inputBtn-Wapper {
   display:flex;
@@ -125,8 +144,14 @@ body{
   border: 1px solid #eee;
   border-radius: 5px;
   overflow: auto;
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
 }
-
+.ImageInfo .content-wrapper .hidden{
+  visibility: hidden;
+  opacity: 0;
+}
 .ImageInfo .content-wrapper img {
   width: 100%;
 }
