--- a/src/style.css
+++ b/src/style.css
@@ -67,6 +67,20 @@ body{
   cursor: pointer;
   background-color: #eee;
 }
+.SearchResult .hover-name{  
+  position:absolute;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(2px);  
+  color:white;
+  font-size: 35px;
+  text-align: center;
+}
+.SearchResult .item:hover .hover-name{
+  display: block;
+}
 .SearchResult .noResult-comment{
   height: 60px;
   position: fixed;
@@ -74,23 +88,6 @@ body{
   top: 40%;
   font-size: 35px;
   color: var(--font-color)
-}
-
-.SearchResult .hover-name{
-  display: none;
-  width: 100%;
-  height: 100%;
-  position:absolute;
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(2px);
-}
-.SearchResult .name{
-  color:white;
-  font-size: 35px;
-  text-align: center;
-}
-.SearchResult .item:hover .hover-name{
-  display: block;
 }
 .inputBtn-Wapper {
   display:flex;
@@ -135,7 +132,6 @@ body{
 }
 
 .ImageInfo .content-wrapper {
-  height: 80vh;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -143,7 +139,6 @@ body{
   background-color: #fff;
   border: 1px solid #eee;
   border-radius: 5px;
-  overflow: auto;
   visibility: visible;
   opacity: 1;
   transition: all 0.3s ease-in-out;
@@ -152,9 +147,17 @@ body{
   visibility: hidden;
   opacity: 0;
 }
+.ImageInfo .info{
+  height: 100%;
+  overflow: auto;
+  padding:5px;
+}
 .ImageInfo .content-wrapper img {
   width: 100%;
+  max-height:80vh ;
+  overflow: auto;
 }
+
 @media screen and (max-width: 992px) {
   .SearchResult{  grid-template-columns: repeat(3, minmax(250px, 1fr));}
 
