--- a/src/style.css
+++ b/src/style.css
@@ -67,11 +67,11 @@ body{
   cursor: pointer;
   background-color: #eee;
 }
-.SearchResult .hover-name{  
-  position:absolute;
+.SearchResult .hover-name{
   display: none;
   width: 100%;
-  height: 100%;
+  height: 100%;  
+  position:absolute;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(2px);  
   color:white;
@@ -108,19 +108,24 @@ body{
   padding: 10px 15px;
   font-size: 35px;
   color:var(--font-color);
+  cursor: pointer;
   background-color: var(--bg-color);
   border: 1px solid var(--font-color);
 }
-.ImageInfo {
+.ImageInfo {  
   width: 100vw;
   height: 100vh;
+  visibility: hidden;
+  transition: visibility 0.5s;
+  animation: fade-out 0.5s linear;
+  -webkit-animation: fade-out 0.5s linear;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(2px);
+  visibility: hidden;
   position: fixed;
   left: 0;
   top: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(2px);
 }
-
 .ImageInfo .title {
   display: flex;
   justify-content: space-between;
@@ -136,16 +141,9 @@ body{
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  background-color: #fff;
-  border: 1px solid #eee;
+  background-color: var(--bg-color);
+  border: 5px solid var(--bg-color);
   border-radius: 5px;
-  visibility: visible;
-  opacity: 1;
-  transition: all 0.3s ease-in-out;
-}
-.ImageInfo .content-wrapper .hidden{
-  visibility: hidden;
-  opacity: 0;
 }
 .ImageInfo .info{
   height: 100%;
@@ -258,5 +256,43 @@ body{
   color: var(--loader-color)
 }
 .hidden {
+  display: none;  
   visibility: hidden;
+}
+.show {
+  visibility: visible;
+  animation: fade-in 0.5s linear;
+  -webkit-animation: fade-in 0.5s linear;
+}
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
