--- a/src/style.css
+++ b/src/style.css
@@ -67,7 +67,7 @@ body{
   cursor: pointer;
   background-color: #eee;
 }
-.SearchResult .hover-name{
+.hover-name{
   display: none;
   width: 100%;
   height: 100%;  
@@ -78,7 +78,7 @@ body{
   font-size: 35px;
   text-align: center;
 }
-.SearchResult .item:hover .hover-name{
+.item:hover .hover-name{
   display: block;
 }
 .SearchResult .noResult-comment{
@@ -86,7 +86,7 @@ body{
   margin:35px;
   position: absolute;
   left:40%;
-  top: 40%;
+  top: 80%;
   font-size: 35px;
   color: var(--font-color)
 }
@@ -235,9 +235,6 @@ body{
 .checkbox:checked + .label .ball {
 	transform: translateX(24px);
 }
-/* .isLoading-wapper .hidden {
-  display: none;
-} */
 .isLoading-wapper{
   display: flex;
   z-index: 1;
@@ -299,4 +296,57 @@ body{
   100% {
     opacity: 0;
   }
+}
+.HomeBanner{
+  position: relative;
+  margin-top: 24px;  
+
+}
+.HomeBanner img{
+  width: 1000px;
+  height:500px;
+  object-fit: cover;
+  background-color: #eee;
+}
+.mySlides {
+  display: none;
+  cursor: pointer;
+}
+.prev, .next {
+  width: auto;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+.text {
+  width: 100%;
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  text-align: center;
 }
