--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,7 @@ body{
   margin-top: 10px;
   grid-template-columns: repeat(4, minmax(250px, 1fr));
   grid-gap: 20px;
+  padding:0px;
 }
 
 .SearchResult img {
@@ -83,11 +84,10 @@ body{
 }
 .SearchResult .noResult-comment{
   height: 60px;
-  margin:35px;
-  position: absolute;
-  left:40%;
-  top: 80%;
+  position:absolute;
+  left: 40%;
   font-size: 35px;
+  text-align: center;
   color: var(--font-color)
 }
 .inputBtn-Wapper {
@@ -161,10 +161,14 @@ body{
 }
 
 @media screen and (max-width: 992px) {
+  #App{  max-width: 992px;}
   .SearchResult{  grid-template-columns: repeat(3, minmax(250px, 1fr));}
-
+  .History{  width:30%;}
+  .historyWord{   max-width: 95px;}
+  
 }
 @media screen and (max-width: 768px) {
+  #App{  max-width: 768px;}
   .SearchResult{  grid-template-columns: repeat(2, minmax(250px, 1fr));}
   .ImageInfo .content-wrapper {
     width: 100%;
@@ -176,10 +180,17 @@ body{
     border: 1px solid #eee;
     border-radius: 5px;
   }
+  .SearchResult .noResult-comment{   left: 20%;}
+  .History{  width:70%;}
+  .historyWord{   max-width: 80px;}
+
 }
 @media screen and (max-width: 576px) {
+  #App{  max-width: 576px;}
   .SearchResult{  grid-template-columns: repeat(1, minmax(250px, 1fr));}
-  .SearchResult .noResult-comment{left:10%;}
+  .SearchResult .noResult-comment{ max-width: 576px;}
+  .History{  width:100%;}
+  .historyWord{   max-width: 50px;}
 }
 @media (prefers-color-scheme: dark) {
   body {
@@ -298,13 +309,12 @@ body{
   }
 }
 .HomeBanner{
-  position: relative;
-  margin-top: 24px;  
-
+  margin: 24px 10px;
+  position: relative;  
 }
 .HomeBanner img{
-  width: 1000px;
-  height:500px;
+  width: 100%;
+  height:400px;
   object-fit: cover;
   background-color: #eee;
 }
@@ -349,4 +359,31 @@ body{
   position: absolute;
   bottom: 8px;
   text-align: center;
+}
+.History{
+  display: flex;
+  width: 80%;
+  margin:10px;
+  position: relative;
+  padding: 0;
+}
+.words{
+  display:flex; 
+  height: 35px;
+  margin:5px;
+  list-style-type: none;
+  border:1px solid var(--font-color);
+  border-radius: 20px;
+  padding:4px; 
+  align-items: center;
+  background-color: var(--bg-color);
+}
+.historyWord{   
+  overflow: hidden;
+  font-size: 24px; 
+  color:var(--font-color);
+  background-color: transparent;
+  border:none; 
+  cursor: pointer;
+  overflow: hidden;  
 }
