--- a/src/style.css
+++ b/src/style.css
@@ -138,6 +138,7 @@ body{
 .ImageInfo .title,
 .ImageInfo .description {
   padding: 5px;
+  color:var(--font-color);
 }
 
 .ImageInfo .content-wrapper {
@@ -176,8 +177,6 @@ body{
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    background-color: #fff;
-    border: 1px solid #eee;
     border-radius: 5px;
   }
   .SearchResult .noResult-comment{   left: 20%;}
